test/src/e2e_vm_tests/test_programs/should_fail/recover_problem_in_different_file/src/foo.sw
library foo;

ยง // Should create lexer problems.
